
[package]
name = "lhe"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../threshold-zk-LHE/algebra" }
bfv = { path = "../threshold-zk-LHE/bfv" }
chacha20poly1305 = "0.10.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
bincode = "1.3.3"

